# hello-world-api

./: Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/helloworldapi/: main.py
