[tool.poetry]
name = "hello-world-api"
version = "0.0.1"
description = "A fantastic api that returns a json with the hello world message"
authors = ["Luís Miranda <luistm@gmail.com>"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.27.0"
fastapi = "^0.109.0"